--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
 </head>
 
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <div id="to-do-heading">
+            <input type="text" id="input-to-do">
+            <button type="button">Note</button>
+        </div>
+        <div id="to-do-body">
+            <ul class="to-do-list">
+                <li class="to-do-item">
+                    <label for="task">aaaaaaaaaaaaaaaaaaaaa</label>
+                    <input type="checkbox" id="task" />
+                </li>
+                <li class="to-do-item">
+                    <label for="task2">ẹqhưẹkqhưẹkqưhkje</label>
+                    <input type="checkbox" id="task2" />
+                </li>
+                <li class="to-do-item">
+                    <label for="task3">qie</label>
+                    <input type="checkbox" id="task3" />
+                </li>
+                <li class="to-do-item">
+                    <label for="task4">cnnmcbxmncb</label>
+                    <input type="checkbox" id="task4" />
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="assets/js/app.js"></script>
 </body>
 
