--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div id="container">
         <div id="to-do-heading">
+            <h1 class="heading">My to do list</h1>
+            <p class="to-do-description">Make your to do list!</p>
             <input type="text" id="input-to-do">
             <button type="button">Note</button>
         </div>
