feat: add note creation and input validation

--- a/index.html
+++ b/index.html
@@ -13,27 +13,11 @@
         <div id="to-do-heading">
             <h1 class="heading">My to do list</h1>
             <p class="to-do-description">Make your to do list!</p>
-            <input type="text" id="input-to-do">
-            <button type="button">Note</button>
+            <input type="text" id="input-to-do" class="">
+            <button type="button" id="note-btn">Note</button>
         </div>
         <div id="to-do-body">
-            <ul class="to-do-list">
-                <li class="to-do-item">
-                    <label for="task">aaaaaaaaaaaaaaaaaaaaa</label>
-                    <input type="checkbox" id="task" />
-                </li>
-                <li class="to-do-item">
-                    <label for="task2">ẹqhưẹkqhưẹkqưhkje</label>
-                    <input type="checkbox" id="task2" />
-                </li>
-                <li class="to-do-item">
-                    <label for="task3">qie</label>
-                    <input type="checkbox" id="task3" />
-                </li>
-                <li class="to-do-item">
-                    <label for="task4">cnnmcbxmncb</label>
-                    <input type="checkbox" id="task4" />
-                </li>
+            <ul id="to-do-list">
             </ul>
         </div>
     </div>
