feat: responsive for note button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <div id="to-do-heading">
             <h1 class="heading">My to do list</h1>
             <p class="to-do-description">Make your to do list!</p>
-            <input type="text" id="input-to-do" class="">
-            <button type="button" id="note-btn">Note</button>
+            <div class="wrapper">
+                <input type="text" id="input-to-do" class="">
+                <button type="button" id="note-btn">Note</button>
+            </div>
         </div>
         <div id="to-do-body">
             <ul id="to-do-list">
